# sonar-cplusss

./: .gitignore  .sonarcloud.properties  CMakeLists.txt  README.md  analyze.sh  build.sh  setup.sh  sonar-project-manual.properties  sonar-project.properties
include/: database_manager.h  user_service.h  vulnerable_queries.h
src/: database_manager.cpp  main.cpp  user_service.cpp  vulnerable_queries.cpp
